--- a/MyKindredsForTablet/app/src/main/res/values/strings.xml
+++ b/MyKindredsForTablet/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="weather_name">天気</string>
     <string name="memo_name">メモ</string>
     <string name="group_todo_title">グループ</string>
+    <string name="history_name">履歴</string>
 </resources>
